content-visible-and-understandable-without-css > Fix headings

--- a/_sass/config/_content.scss
+++ b/_sass/config/_content.scss
@@ -351,7 +351,7 @@
         margin: 0.3rem 0;
     }
 
-    h2 {
+    h5 {
         border: none;
         font-size: 1.6rem;
         margin: 0.3rem 0;
